--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ html {
 /* Text Styles */
 h1 {
   font-family: 'COCOGOOSE', sans-serif;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 100;
   line-height: 1;
   letter-spacing: -8%;
